--- a/habilidades.html
+++ b/habilidades.html
@@ -40,9 +40,9 @@
         <div class="fila">
             <div class="servicio">
                 <span class="icono"> <i class="fa-solid fa-code"></i></span>
-                <h4>Diseño de Prototipos</h4>
+                <h4>Ingles</h4>
                 <hr>
-                <p>Diseño medio en Portotipos de paginas web, usando Balsamiq Wireframes.</p>
+                <p>Manejo intermedio de el lenguaje ingles.</p>
             </div>
             <div class="servicio">
                 <span class="icono"><i class="fa-solid fa-file-code"></i></span>
@@ -56,6 +56,7 @@
                 <hr>
                 <p>Manejo basico de CSS para el diseño de la pagina web.</p>
             </div>
+            
         </div>
         <h3 class="titulo-seccion">PROXIMAMENTE</h3>
         <div class="fila">
