manejo del idioma ingles

--- a/habilidades.html
+++ b/habilidades.html
@@ -42,7 +42,7 @@
                 <span class="icono"> <i class="fa-solid fa-code"></i></span>
                 <h4>Ingles</h4>
                 <hr>
-                <p>Manejo intermedio de el lenguaje ingles.</p>
+                <p>Manejo intermedio de el idioma ingles.</p>
             </div>
             <div class="servicio">
                 <span class="icono"><i class="fa-solid fa-file-code"></i></span>
