cambio de logotipos

--- a/habilidades.html
+++ b/habilidades.html
@@ -39,19 +39,19 @@
         <h3 class="titulo-seccion">MIS HABILIDADES</h3>
         <div class="fila">
             <div class="servicio">
-                <span class="icono"> <i class="fa-solid fa-code"></i></span>
+                <span class="icono"><i class="fa-solid fa-language"></i></i></span>
                 <h4>Ingles</h4>
                 <hr>
                 <p>Manejo intermedio de el idioma ingles.</p>
             </div>
             <div class="servicio">
-                <span class="icono"><i class="fa-solid fa-file-code"></i></span>
+                <span class="icono"><i class="fa-brands fa-html5"></i></span>
                 <h4>HTML</h4>
                 <hr>
                 <p>Manejo basico de HTML para el desarrollo de la estructura de una página web.</p>
             </div>
             <div class="servicio">
-                <span class="icono"><i class="fa-solid fa-arrow-trend-up"></i></span>
+                <span class="icono"><i class="fa-brands fa-css3-alt"></i></span>
                 <h4>CSS</h4>
                 <hr>
                 <p>Manejo basico de CSS para el diseño de la pagina web.</p>
@@ -61,19 +61,19 @@
         <h3 class="titulo-seccion">PROXIMAMENTE</h3>
         <div class="fila">
             <div class="servicio">
-                <span class="icono"> <i class="fa-solid fa-code"></i></span>
+                <span class="icono"> <i class="fa-brands fa-square-js"></i></i></span>
                 <h4>JavaScript</h4>
                 <hr>
                 <p>ACTUALMENTE EN DESARROLLO</p>
             </div>
             <div class="servicio">
-                <span class="icono"><i class="fa-solid fa-file-code"></i></span>
+                <span class="icono"><i class="fa-brands fa-angular"></i></i></span>
                 <h4>Angular</h4>
                 <hr>
                 <p>ACTUALMENTE EN DESARROLLO</p>
             </div>
             <div class="servicio">
-                <span class="icono"><i class="fa-solid fa-arrow-trend-up"></i></span>
+                <span class="icono"><i class="fa-brands fa-react"></i></span>
                 <h4>React</h4>
                 <hr>
                 <p>ACTUALMENTE EN DESARROLLO</p>
