--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="presentacion">
                 <p class="bienvenida">HOLA</p>
-                <h2>Soy <span>SEBASTIAN SALAZAR</span>, Desarrolador web</h2>
+                <h2>Soy <span>SEBASTIAN SALAZAR</span>, Desarrollador web</h2>
                 <a href="https://github.com/LuisSebastian28?tab=repositories" target="_blank">Ir a Portafolio</a>
             </div>
         </div>
