--- a/sobremi.html
+++ b/sobremi.html
@@ -49,7 +49,7 @@
             <p class="titulo-seccion">Sobre Mi</p>
             <h2>Hola, Soy <span>Sebastian Salazar</span> </h2>
             <h3>Desarrollador Web</h3>
-            <p>Actualmente con nivel de bachiller e iniciante con el desarrollo web, actualmente puedo trabajar con HTML, CSS y con algo de JS.</p>
+            <p>Actualmente con nivel de bachiller e iniciante con el desarrollo web, en este perciso momento puedo trabajar con HTML, CSS y con algo de JS.</p>
             <p>Proximamente implementare mas habilidades como Angular o React.</p>
             <a href="https://github.com/LuisSebastian28?tab=repositories" target="_blank">PORTAFOLIO</a>
         </div>
